--- a/app/src/main/res/layout/register_button.xml
+++ b/app/src/main/res/layout/register_button.xml
@@ -18,4 +18,14 @@
         android:layout_marginStart="150dp"
         android:text="Register"
         android:layout_width="136dp"/>
+
+    <Button
+        android:id="@+id/buttonDeregister"
+        android:layout_height="48dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="5dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="150dp"
+        android:layout_width="136dp"
+        android:text="Deregister" />
 </RelativeLayout>
