--- a/app/src/main/res/layout/activity_event_creation.xml
+++ b/app/src/main/res/layout/activity_event_creation.xml
@@ -10,14 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.eventCreation.EventCreationActivity">
+    tools:context=".EventCreationActivity">
 
 
     <Button
         android:id="@+id/button_capture"
         android:layout_width="170dp"
         android:layout_height="48dp"
-        android:onClick="captureImage"
+
         android:text="Set Event Cover"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
