--- a/app/src/main/res/layout/layout_one_event.xml
+++ b/app/src/main/res/layout/layout_one_event.xml
@@ -9,6 +9,7 @@
     tools:context=".OneEventActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -21,19 +22,17 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="19dp"
             android:layout_marginTop="19dp"
             android:layout_marginEnd="19dp"
             android:layout_marginBottom="19dp">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cardView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="19dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="19dp"
-                android:layout_marginBottom="19dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="15dp"
                 app:cardPreventCornerOverlap="false"
@@ -64,7 +63,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"/>
 
             <TextView
                 android:id="@+id/name"
@@ -75,11 +74,12 @@
                 android:paddingBottom="10dp"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 app:layout_constraintStart_toEndOf="@id/content"
                 app:layout_constraintTop_toBottomOf="@+id/content" />
 
             <ImageView
+                android:id="@+id/imageView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/rocket"
@@ -95,22 +95,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/text_margin"
+                android:layout_marginStart="@dimen/text_margin"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="@dimen/text_margin"
+                android:paddingBottom="10dp"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toEndOf="@id/name"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/name" />
 
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"
-                android:textColor="@color/white"
+            <ScrollView
+                android:id="@+id/scrollable"
+                android:layout_width="fill_parent"
+                android:layout_height="200dp"
+                android:scrollbars="vertical"
+                android:fillViewport="true"
                 app:layout_constraintStart_toEndOf="@id/location"
-                app:layout_constraintTop_toBottomOf="@+id/location" />
+                app:layout_constraintTop_toBottomOf="@+id/location">
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/text_margin"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="@dimen/text_margin"
+                    android:textAppearance="?attr/textAppearanceListItem"
+                    android:textColor="@color/white"
+                     />
+            </ScrollView>
 
 
             <TextView
@@ -118,26 +132,72 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/text_margin"
+                android:layout_marginStart="@dimen/text_margin"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="@dimen/text_margin"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toEndOf="@id/description"
-                app:layout_constraintTop_toBottomOf="@+id/description" />
+                app:layout_constraintStart_toEndOf="@id/scrollable"
+                app:layout_constraintTop_toBottomOf="@+id/scrollable" />
 
             <TextView
                 android:id="@+id/capacity"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/text_margin"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="16dp"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toEndOf="@id/time"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/time" />
 
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/location"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/button3"
+                app:layout_constraintTop_toTopOf="@+id/button3" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="#00FFFFFF"
+                android:onClick="someFunction"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/deregister"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cardView2"
+        android:layout_gravity="bottom"
+        android:layout_marginStart="40dp"
+        android:onClick="deregister"
+        android:textSize="18dp"
+        android:text="@string/mderegister"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cardView2"
+        android:layout_gravity="bottom"
+        android:textSize="18dp"
+        android:layout_marginStart="220dp"
+        android:onClick="register"
+        android:text="@string/mregister"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        tools:ignore="MissingConstraints" />
 
 </RelativeLayout>
