--- a/app/src/main/res/layout/layout_one_event.xml
+++ b/app/src/main/res/layout/layout_one_event.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/bg_with_stars"
-    tools:context=".OneEventActivity">
+    tools:context=".AttendeeActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
@@ -175,29 +175,23 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/deregister"
+        android:id="@+id/deregisterFree"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView2"
         android:layout_gravity="bottom"
         android:layout_marginStart="40dp"
-        android:onClick="deregister"
         android:textSize="18dp"
         android:text="@string/mderegister"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/register"
+        android:id="@+id/registerFree"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView2"
         android:layout_gravity="bottom"
         android:textSize="18dp"
         android:layout_marginStart="220dp"
-        android:onClick="register"
         android:text="@string/mregister"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
         tools:ignore="MissingConstraints" />
 
-</RelativeLayout>
+</ConstraintLayout>
