--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -11,9 +11,9 @@
     app:layoutManager="LinearLayoutManager"
     android:background="@drawable/bg_with_stars"
     tools:context=".EventsFragment"
-    tools:listitem="@layout/fragment_events"
+    tools:listitem="@layout/fragment_events">
 
-    />
+</androidx.recyclerview.widget.RecyclerView>
 
 
 
